# NumericalRecipesFortran

./: .gitignore  LICENSE  README.md  REAME.md  annotated.html  annotated_dup.js  badluk_8f90.html  badluk_8f90.js  badluk_8f90_a7c327c146682aff913576359ffd45e72_cgraph.map  badluk_8f90_a7c327c146682aff913576359ffd45e72_cgraph.md5  badluk_8f90_source.html  caldat_8f90.html  caldat_8f90.js  caldat_8f90_source.html  ch1_8f90.html  ch1_8f90.js  ch1_8f90_source.html  ch2__mod_8f90.html  ch2__mod_8f90.js  ch2__mod_8f90_source.html  ch2__tester_8f90.html  ch2__tester_8f90.js  ch2__tester_8f90_a4d8e2dfc0842c2f672b5d714e795e776_cgraph.map  ch2__tester_8f90_a4d8e2dfc0842c2f672b5d714e795e776_cgraph.md5  ch2__tester_8f90_source.html  ch_01_preeliminaries.html  ch_02_linear_equations.html  ch__01__preeliminaries_8md.html  ch__02__linear__equations_8md.html  classes.html  date__utils_8f90.html  date__utils_8f90.js  date__utils_8f90_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7a5d039e9dbb12e848b1a603f1a75acd.html  dir_7a5d039e9dbb12e848b1a603f1a75acd.js  dir_7a5d039e9dbb12e848b1a603f1a75acd_dep.map  (+145 more)
.github/workflows/: .ci.yml.swp  ci.yml  deploy-docs.yml
doc/: Doxyfile.in  ch2_solution_of_linear_equations.md  ch_01_preeliminaries.md  ch_02_linear_equations.md  index.md  meson.build  preeliminaries.md
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  (+13 more)
src/: badluk.f90  ch1.f90  date_utils.f90  flmoon.f90  julday.f90  meson.build
src/ch1/: badluk.f90  caldat.f90  ch1.f90  julday.f90  meson.build
src/ch2/: ch2_mod.f90  gaussj.f90  meson.build
tests/: meson.build  ps_algorithms.f90  ps_benchmark.f90  test_caldat.f90  test_date_utils.f90  test_julday.f90  tester.f90
tests/ch1/: meson.build  ps_algorithms.f90  ps_benchmark.f90  test_badluck.f90  test_caldat.f90  test_julday.f90  tester.f90
tests/ch2/: ch2_tester.f90  meson.build  test_ch2.f90  test_gaussj.f90
